# sly_bevy_jam2

./: CREDIT.md  Cargo.toml  README.md  bevy_game-16a26c82a8ba4d41.js  bevy_game-fc4b112c878e558a.js  index.html  reactor-9cf5de782c6e5584.js
.github/workflows/: release.yaml
assets/spacekit/: alien.glb  astronautA.glb  astronautB.glb  barrel.glb  barrels.glb  barrels_rail.glb  bones.glb  desk_chair.glb  desk_chairArms.glb  desk_chairStool.glb  desk_computer.glb  desk_computerCorner.glb  desk_computerScreen.glb  machine_barrel.glb  machine_barrelLarge.glb  machine_generator.glb  machine_generatorLarge.glb  machine_wireless.glb  machine_wirelessCable.glb  mod.rs  rocket_baseA.glb  rocket_baseB.glb  rocket_finsA.glb  rocket_finsB.glb  rocket_fuelA.glb  rocket_fuelB.glb  rocket_sidesA.glb  rocket_sidesB.glb  rocket_topA.glb  rocket_topB.glb  weapon_blasterR.glb  weapon_blasterR.gltf  weapon_gun.glb  weapon_gun.gltf  weapon_rifle.glb
src/: actions.rs  assets.rs  audio.rs  camera.rs  camera_controller.rs  cursor.rs  debug.rs  debug_overlay.rs  lib.rs  lines.rs  main.rs  menu.rs  player.rs
src/characters/: mod.rs  nexus.rs
src/characters/nexus/: mod.rs
src/level/: intro.rs  mod.rs
src/level/intro/: mod.rs
src/prefabs/: alien.rs  astronaut_a.rs  desk.rs  despencer.rs  dispenser.rs  door.rs  mod.rs  pellet.rs  player.rs  polarity_blaster.rs  reactor.rs  rooms.rs  space_kit.rs  switch.rs
src/prefabs/ai/: audio.rs  mod.rs
src/prefabs/nexus/: audio.rs  mod.rs
src/states/: loading.rs  menu.rs  mod.rs  playing.rs  pre_loading.rs
src/states/menu/: audio.rs  buttons.rs  mod.rs
