[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12", features = ["stageless"] }
iyes_loopless = { version = "0.7.0" }
bevy_polyline = "0.3.0"
bevy-inspector-egui = "0.12.1"
bevy_tweening = "0.5"
rand = { version = "0.8.3" }

# my repos
#sly_camera_controller = { git = "https://github.com/slyedoc/sly_camera_controller", branch = "main" }
#sly_physics = { git = "https://github.com/slyedoc/sly_physics", branch = "main" }
sly_physics = { path = "../sly_physics" }


# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
