[package]
name = "reactor" # ToDo
version = "0.2.0"
publish = false
authors = ["Patrick Towles <james.towles@gmail.com>"] 
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy-inspector-egui = "0.12"
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12", features = ["stageless"] }
iyes_loopless = { version = "0.7" }
bevy_mod_outline = "0.2"
bevy_tweening = "0.5"
rand = { version = "0.8.3" }

# my repos
sly_physics = { git = "https://github.com/slyedoc/sly_physics", branch = "main" }
#sly_physics = { path = "../sly_physics" }


# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
